# jieba.vim

./: LICENSE.txt  README.md  TODO.md  addon-info.json
doc/: jieba.vim.txt
plugin/: jieba_vim.vim
pythonx/: Cargo.toml  build.rs
pythonx/jieba_vim/: __init__.py  navigation.py  preview.py
pythonx/jieba_vim_rs_core/: Cargo.toml
pythonx/jieba_vim_rs_core/src/: lib.rs  token.rs  utils.rs
pythonx/jieba_vim_rs_core/src/motion/: d_special.rs  mod.rs  nmap_b.rs  nmap_e.rs  nmap_ge.rs  nmap_w.rs  omap_b.rs  omap_c_w.rs  omap_d_e.rs  omap_d_ge.rs  omap_e.rs  omap_ge.rs  omap_w.rs  token_iter.rs  xmap_b.rs  xmap_e.rs  xmap_ge.rs  xmap_w.rs
pythonx/jieba_vim_rs_test/: Cargo.toml
pythonx/jieba_vim_rs_test/src/: assert_elapsed.rs  cursor_marker.rs  lib.rs  verified_case.rs
pythonx/jieba_vim_rs_test/src/verified_case/: base.rs  mod.rs  verified_case_old.rs  verify.rs
pythonx/jieba_vim_rs_test/src/verified_case/cases/: base.rs  mod.rs  nmap_b.rs  nmap_e.rs  nmap_ge.rs  nmap_w.rs  omap_c_b.rs  omap_c_e.rs  omap_c_ge.rs  omap_c_w.rs  omap_d_b.rs  omap_d_e.rs  omap_d_ge.rs  omap_d_w.rs  omap_y_b.rs  omap_y_e.rs  omap_y_ge.rs  omap_y_w.rs  utils.rs  xmap_b.rs  xmap_e.rs  xmap_ge.rs  xmap_w.rs
pythonx/jieba_vim_rs_test/src/verified_case/cases/templates/: execute_omap_c.j2  execute_omap_d.j2  execute_omap_y.j2  execute_xmap.j2  include.j2  setup.j2  setup_omap.j2
pythonx/jieba_vim_rs_test_macro/: Cargo.toml
pythonx/jieba_vim_rs_test_macro/src/: lib.rs  verified_case.rs
pythonx/jieba_vim_rs_test_verifiable_case/: Cargo.toml
pythonx/jieba_vim_rs_test_verifiable_case/src/: lib.rs
pythonx/src/: lib.rs  preview.rs  token.rs  utils.rs  wrappers.rs
test/: .gitignore  requirements.txt  run_test.sh  test_jieba_en.py  vimrc
(+3 files in other folders)
