[package]
name = "jieba_vim_rs_core"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
jieba-rs = "0.7"
proptest = "1.0"
ntest_timeout = "0.9.3"
ctor = "0.2.8"
once_cell = "1.20"
jieba_vim_rs_test_verifiable_case = { path = "../jieba_vim_rs_test_verifiable_case" }
jieba_vim_rs_test = { path = "../jieba_vim_rs_test" }
