[package]
name = "jieba_vim_rs_core"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
jieba-rs = "0.7"
ntest_timeout = "0.9.3"
serial_test = "3.2.0"
proptest = "1.0"
ctor = "0.2.8"
once_cell = "1.20"
paste = "1.0"
const_format = "0.2.33"
jieba_vim_rs_test = { path = "../jieba_vim_rs_test" }
jieba_vim_rs_test_macro = { path = "../jieba_vim_rs_test_macro" }

[features]
verifiable_case = []
